Ref yaourt : ajoute Lucey1998 et corrige Roefs1986

--- a/fig_plis/Yaourt.bib
+++ b/fig_plis/Yaourt.bib
@@ -254,7 +254,7 @@
 }
 
 @Article{Bremer1989,
-  Title                    = {{Theoretical and experimental study of the fractal nature of the structure of casein gels}},
+  Title                    = {Theoretical and experimental study of the fractal nature of the structure of casein gels},
   Author                   = {Bremer, Leon G. B. and van Vliet, Ton and Walstra, Pieter},
   Journal                  = {J. Chem. Soc. Faraday Trans. 1 Phys. Chem. Condens. Phases},
   Year                     = {1989},
@@ -1062,6 +1062,17 @@
   Url                      = {http://link.springer.com/10.1007/PL00011084}
 }
 
+@Book{landau1986,
+  Title                    = {Course of theoretical physics: theory of elasticity},
+  Author                   = {Landau, Lev Davidovitch and Lifchits, Evgueni Mikhailovitch},
+  Publisher                = {Butterworth-Heinemann},
+  Year                     = {1986},
+  Edition                  = {3rd},
+
+  Owner                    = {mathieu},
+  Timestamp                = {2015.02.13}
+}
+
 @Article{LeGoff2014,
   Title                    = {{Frozen states and order-disorder transition in the dynamics of confined membranes}},
   Author                   = {{Le Goff}, Thomas and Politi, Paolo and Pierre-Louis, Olivier},
@@ -1222,6 +1233,21 @@
   Keywords                 = {casein micelle,rennet coagula-,rennet coagulion,rheology,yogurt},
   Publisher                = {Elsevier},
   Url                      = {http://linkinghub.elsevier.com/retrieve/pii/S0022030202740782}
+}
+
+@Article{Lucey1998,
+  Title                    = {{Formation and physical properties of acid milk gels: a review}},
+  Author                   = {Lucey, J A and Singh, H},
+  Journal                  = {Food Res. Int.},
+  Year                     = {1998},
+  Number                   = {7},
+  Pages                    = {529--542},
+  Volume                   = {30},
+
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/1998/Food Research International/Lucey, Singh - 1998 - Formation and physical properties of acid milk gels a review.pdf:pdf},
+  Keywords                 = {acid milk gels,aggregation,fractal,microstructure,permeability,rheology,whey separation,yoghurt},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.02.13}
 }
 
 @Article{Ma2004,
@@ -1569,11 +1595,15 @@
 }
 
 @PhdThesis{Roefs1986,
-  Title                    = {{Structure of acid casein gels: a study of gels formed after acidification in the cold}},
+  Title                    = {Structure of acid casein gels: a study of gels formed after acidification in the cold},
   Author                   = {Roefs, Sebastianus PFM},
+  School                   = {Wageningen Agricultural University, the Netherlands},
   Year                     = {1986},
+  Type                     = {PhD},
 
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/1986/Unknown/Roefs - 1986 - Structure of acid casein gels a study of gels formed after acidification in the cold.pdf:pdf}
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/1986/Unknown/Roefs - 1986 - Structure of acid casein gels a study of gels formed after acidification in the cold.pdf:pdf},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.02.13}
 }
 
 @Article{Roman2002,
