--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -49,7 +49,7 @@ There are many ways and reasons for a film to wrinkle. An elastic film buckles d
 
 Yet, benchmark experiments that explore the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium are in line, not only from a physics point of view, but also to get fundamental insights into biologically relevant situation. Indeed, stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002} and remains theoretical because, on a free interface, gravity dominates over viscous substrate. In a biological context, thin tissues, e.g. epithelimum or endothelium, are naturally confined and immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation where a thin viscous substrate would set the wrinkling wavelength. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}.
 
-Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of caseins, a family of milk proteins. As a result, not only does the casein form a gel as expected~\cite{Roefs1986,Bremer1989} -- this is a well-known effect used in yoghurt making -- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit walls is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimetre scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} and in Supplementary Videos 1 and 2, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Fig.~\ref{fig:dynamics} and that only a wrinkling instability can be invoked. 
+Here, we introduce model permeable biogels that produce hierarchical wrinkling as a result of their interplay between their gelation dynamics and the confinement conditions. In slit geometry, we slowly acidify a dispersion of caseins, a family of milk proteins. As a result, not only does the casein form a gel as expected~\cite{Roefs1986,Bremer1989,Lucey1998} -- this is a well-known effect used in yoghurt making -- but the gel starts to produce wrinkling patterns in cascade when casein adhesion to the slit walls is turned off. Using a combination of rheology, light microscopy and confocal microscopy, we demonstrate that upon acidification the casein network spontaneously shrinks then swells at the micron level and wrinkles at the millimetre scale. We systematically investigate such swelling-induced wrinkling of a porous gel film sandwiched between two viscous layers, the whole system being confined between two glass plates. As shown in Fig.~\ref{fig:dynamics} and in Supplementary Videos 1 and 2, transverse confinement leads to saturation of the amplitude on both the top and bottom walls followed by a cascade of secondary and ternary buckling. Such cascade buckling has already been observed by~\cite{Roman1999} in a one-dimensional macroscopic system, a sheet of steel forced to buckle between two solid plates. In addition one has to note that the primary wavelength is much smaller than the size of the system, implying that a simple buckling scenario cannot explain the observations in Fig.~\ref{fig:dynamics} and that only a wrinkling instability can be invoked. 
 
 \begin{figure}[ht!]
 	\includegraphics{dynamics}%
@@ -71,13 +71,13 @@ The main goal of the present study is thus to identify the selection mechanism o
 
 To form wrinkled patterns such as the one observed in figure~\ref{fig:dynamics}, ones needs to take advantage of the pH sensitivity of caseins to control the route to gelation, to fine tune the gel properties and the boundary conditions.
 
-The stability of caseins dispersion strongly depend on the pH of the solution. Supplementary Video 3 shows the titration of a caseins dispersion at 1\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then then flocculate between pH=5.5 to 4 and finaly at pH=3 the solution become clear again. However as one increases the caseins concentration up to 4\%w, at low pH the caseins redispersion is not total, Supplementary Video 4. The state diagram of caseins as a function of the pH is related to charge stabilization. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.6$), caseins molecules loose their negative net charge and tend to stick to each other~\cite{Roefs1986,Bremer1989}. Beyond the isoelectric point casein acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH (see Supplementary Methods). Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH of the solution to the isolectric point the free casein fraction drop to almost 0, almost all the casein molecule are aggregated. Further decrease of the pH of the solution lead to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
+The stability of caseins dispersion strongly depend on the pH of the solution. Supplementary Video 3 shows the titration of a caseins dispersion at 1\%w by 1 molar HCl. At pH=7, the caseins are well dispersed then then flocculate between pH=5.5 to 4 and finaly at pH=3 the solution become clear again. However as one increases the caseins concentration up to 4\%w, at low pH the caseins redispersion is not total, Supplementary Video 4. The state diagram of caseins as a function of the pH is related to charge stabilization. At neutral pH caseins are charged negatively and repel each other. As the pH decreases to the isoelectric point of the caseins (pH$\approx 4.6$), caseins molecules loose their negative net charge and tend to stick to each other~\cite{Roefs1986,Bremer1989,Lucey1998}. Beyond the isoelectric point casein acquire a positive net charge and therefore partially re-dissolve. In the inset of Figure~\ref{fig:acidification}b, we quantify this effect and measure with UV absorption spectroscopy the amount of free caseins within the 4\%w dispersion as a function of pH (see Supplementary Methods). Starting at pH=6.8 all the casein molecules are well dispersed and the free casein fraction $x_\text{free}$ is 1. Upon decreasing the pH of the solution to the isolectric point the free casein fraction drop to almost 0, almost all the casein molecule are aggregated. Further decrease of the pH of the solution lead to a partial redissolution of the casein aggregates. At pH=2 the fraction of free casein is 0.35.
 
 %On the Stability of Casein Micelles, Pieter Walstra J. of dairy science 1990
 
 To form a space spanning gel, flocculation needs to be prevented. We use of glucono-$\delta$-lactone (GDL) a molecule  that slowly hydrolyses into an acid and thus lowers slowly, continuously and homogeneously the pH of the medium, Fig.~\ref{fig:acidification}a. This GDL controlled acidification enables the formation of a bulk gel phase below pH=5.3 with $x_\text{free}\approx 0$. As shown on Figure~\ref{fig:acidification}a and b, when adding enough GDL the pH lowers beyond the isoeletric point and $x_\text{free}$ rises again. We monitor the GDL induced gelation with a rheometer in cone plate geometry. As casein strongly adsorbs to surfaces, the strain and stress are well transmitted to the casein dispersion and we can measure the elastic and viscous modulus of the casein dispersion as a function of time, Figure~\ref{fig:acidification}c. The mechanical properties of the gel are closely related to the fraction of free casein. First, the dispersion solidifies then reaches its maximum elasticity (500 Pa) at the isoelectric point and finally the elastic modulus decreases down to 100 Pa. This finite value indicates that the sample is still a gel.
 
-To gain further insight into the mechanical properties of the gel we turn to micro structural observations under confocal microscopy. As shown in Supplementary Figure~\ref{fig:nonmonotonic} the gel consist in a space spanning fractal network with a cut off length scale $\xi$ that corresponds to the maximum pore size of the network. This model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network [refXXX]. This stiffens the arms of the network and is responsible for the increase of elasticity. Beyond the isoelectric point $\xi$ decreases down to \SI{4}{\micro\metre}. As caseins regain solubility, the strands of the network swell, the pores shrink and the gel weakens.
+To gain further insight into the mechanical properties of the gel we turn to micro structural observations under confocal microscopy. As shown in Supplementary Figure~\ref{fig:nonmonotonic} the gel consist in a space spanning fractal network with a cut off length scale $\xi$ that corresponds to the maximum pore size of the network. This model fits the structure at all times but its parameters vary non monotonously during GDL acidification. As shown in Figure~\ref{fig:acidification}d, when reaching the isolectric point $\xi$ increases up to a maximum length of \SI{7}{\micro\metre} due to the solvent expulsion out of the casein network~\cite{Lucey1998}. This stiffens the arms of the network and is responsible for the increase of elasticity. Beyond the isoelectric point $\xi$ decreases down to \SI{4}{\micro\metre}. As caseins regain solubility, the strands of the network swell, the pores shrink and the gel weakens.
 
 XXXCe paragraphe fait-il sens ici ?XXX As seen on the confocal measurements, the gel is porous and is permeable to the solvent.  This property is determinant as it allow the gel to absorb and expel the solvent and therefore change its volume when sticky boundary are turned off. To quantify this effect, we have embedded the casein gel inside a capillary and dip vertically the capillary in an aqueous buffer~\cite{VanDijk1986}. In the Supplementary Figure~\ref{fig:permeability}, we observe that the aqueous buffer goes through the gel and rise in the tube due to capillary forces. Exploitation of this experiment give the permeability of the gel: \SI{67000}{\square\nano\metre}.
 
@@ -164,7 +164,7 @@ Our results are displayed in Fig.~\ref{fig:DarcyPoiseuille}. Although they provi
 
 \section*{conclusion}
 
-In conclusion we have taken advantage of the properties of the protein casein and carefully engineered the route to form permeable biogels that, in slit geometry, produce original cascade of wrinkling patterns when casein adhesion to the slit walls is turned off. We developed a model that captures the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel layer for long wavelengths and a new mechanism, Darcy flow of the solvent through the gel layer for short wavelengths. Such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different sort of proteins. As such it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in food science refXXX or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Chan2006a,Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013}.
+In conclusion we have taken advantage of the properties of the protein casein and carefully engineered the route to form permeable biogels that, in slit geometry, produce original cascade of wrinkling patterns when casein adhesion to the slit walls is turned off. We developed a model that captures the dynamical origin of the constrains exerted on the gel and predict the wrinkling wavelength: Poiseuille flows of the solvent above and below the gel layer for long wavelengths and a new mechanism, Darcy flow of the solvent through the gel layer for short wavelengths. Such a model experiment, because it relies on pH induced charge stabilisation/destabilisation, should be generalisable to different sort of proteins. As such it illustrates daily life problems such as wrinkles encountered while putting up wall paper and could set a benchmark to explore potential applications in food science refXXX or in optical devices such as diffraction gratings or Fresnel lenses~\cite{Li2013}, and the possibility of wrinkling in confined porous soft materials immersed in a buoyancy-matched viscous medium such as biological tissues~\cite{Ma2004,Longley2013}.
 
 
 %role of gravity
