Déplace Permeability measurements pour que les SF soient citées dans l'ordre

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -97,7 +97,7 @@ Boundary conditions is the final parameter that is essential to form wrinkled pa
 
 \section*{Dynamics of the wrinkling process}
 
-Figure~\ref{fig:sideview}a shows confocal measurements in the case where both top and bottom walls are coated, adhesion turned off, a configuration favourable to wrinkling (see also Supplementary Videos 7 and 8). Initially the dispersion is homogeneous and fills the entire slit. The black margins correspond to the glass walls. Around \SI{23}{\minute}, the gel forms and simultaneously becomes thinner and more concentrated - the fluorescence signal which is proportional to the casein concentration is brighter compared to the initial situation. This effect is the fingerprint of syn\ae{}resis: as gelation proceeds, the solvent is expelled on both the upper and lower sides. We describe this situation as a porous elastic film of thickness $h$ sandwiched between two viscous layers of respective thickness $H_1$ and $H_2$ in a cell of thickness $e=H_1+h+H_2$ (Fig.~\ref{fig:sideview}b). Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}c) and excess surface area of the gel film (Fig.~\ref{fig:sideview}d) (see Supplementary Methods). As expected from the system design, the evolution of the volume is non-monotonous. After reaching a minimum around 35\% of its initial value at \SI{23}{\minute}, the volume increases. Shortly after,  at \SI{36}{\minute}, the planar film destabilizes and starts to wrinkle in the $z$-direction creating excess area. This confirms that the instability is due to swelling. Around \SI{38}{\minute}, the amplitude of the wrinkles reach the thickness of the slit. The size of the primary pattern is now settled, Supplementary Figures~\ref{fig:patterns} and \ref{fig:growth}. However swelling continues, the gel flattens on both top and bottom walls (\SI{44}{\minute}) and finally buckles back (\SI{53}{\minute}) to form the secondary pattern (\SI{1}{\hour}21). When the excess volume saturates, the dynamics stops. The amount of GDL controls the ability of the gel to swell: at low GDL concentrations we only observe the primary pattern, at high GDL concentrations we observe the formation of higher order patterns. 
+Figure~\ref{fig:sideview}a shows confocal measurements in the case where both top and bottom walls are coated, adhesion turned off, a configuration favourable to wrinkling (see also Supplementary Videos 7 and 8). Initially the dispersion is homogeneous and fills the entire slit. The black margins correspond to the glass walls. Around \SI{23}{\minute}, the gel forms and simultaneously becomes thinner and more concentrated - the fluorescence signal which is proportional to the casein concentration is brighter compared to the initial situation. This effect is the fingerprint of syn\ae{}resis: as gelation proceeds, the solvent is expelled on both the upper and lower sides. We describe this situation as a porous elastic film of thickness $h$ sandwiched between two viscous layers of respective thickness $H_1$ and $H_2$ in a cell of thickness $e=H_1+h+H_2$ (Fig.~\ref{fig:sideview}b). Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}c) and excess surface area of the gel film (Fig.~\ref{fig:sideview}d) (see Supplementary Methods). As expected from the system design, the evolution of the volume is non-monotonous. After reaching a minimum around 35\% of its initial value at \SI{23}{\minute}, the volume increases. Shortly after,  at \SI{36}{\minute}, the planar film destabilizes and starts to wrinkle in the $z$-direction creating excess area. This confirms that the instability is due to swelling. Around \SI{38}{\minute}, the amplitude of the wrinkles reach the thickness of the slit. The size of the primary pattern is now settled, Supplementary Figures~\ref{fig:generations} and \ref{fig:growth}. However swelling continues, the gel flattens on both top and bottom walls (\SI{44}{\minute}) and finally buckles back (\SI{53}{\minute}) to form the secondary pattern (\SI{1}{\hour}21). When the excess volume saturates, the dynamics stops. The amount of GDL controls the ability of the gel to swell: at low GDL concentrations we only observe the primary pattern, at high GDL concentrations we observe the formation of higher order patterns. 
 
 Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and thus allows subsequent planar stresses to develop while swelling: the only situation where we observe wrinkling is when the adhesion on both top and bottom wall is turned off. We also confirmed that at any given point in time and space the thickness $h$ of the film of gel is homogeneous. The contrast in transmission microscopy (Fig.~\ref{fig:dynamics}a) is therefore not due to thickness inhomogeneities but to altitude gradients. Indeed the length of the optical path along the vertical direction $z$ through the gel phase is larger where the gel makes a slope compared to a flat situation, as indicated by the yellow vertical lines in Fig.~\ref{fig:sideview}b.
 
@@ -175,7 +175,7 @@ Sodium caseinate (Firmenich) is dissolved in deionised water by stirring for \SI
 
 Home made optical cells are composed of a slide (RS France) and a cover slip (Menzel-Gl\"aser) spaced by parafilm (Parafilm). The optical cell is briefly heated on a hot plate so that the parafilm welds to the slide and the cover slip. Gently applying a pressure on the cover slip while being heated allows us to tune the thickness of the cell from \SIrange{50}{150}{\micro\metre}. The slit is filled with the casein dispersion, immediately sealed using ultraviolet-cured glue (Norland Optical) and placed under the microscope before gelation could take place. To prevent adsorption of caseins to surfaces, microscope slides and cover slips used to make microscopy cells are cleaned and subsequently coated with a silane agent (3-(trimethoxysilyl) propyl methacrylate, Sigma Aldrich) from which a polyacrylamide brush is polymerized from methacrylate groups (Euromedex).
 
-3D data are collected on a Zeiss LSM510 confocal microscope, using \SI{532}{\nano\meter} laser excitation. We use either a 10x (air) lens to measure the geometry of wrinkling (see Supplementary Material) or a 63x (oil) lens to observe the microstructure of the gel. Larger scope pictures, obtained either by stitching fluorescent microscopy images (Nikon Eclipse Ti) or by transmitted/reflected light macroscope (Nikon SMZ745T/Leica DMS1000) are used to measure the wavelength of the primary pattern (Supplementary Figures~\ref{fig:patterns} and \ref{fig:generations}). Secondary pattern wavelength is set to half of the primary wavelength, according to Supplementary Fig.~\ref{fig:generations}.
+3D data are collected on a Zeiss LSM510 confocal microscope, using \SI{532}{\nano\meter} laser excitation. We use either a 10x (air) lens to measure the geometry of wrinkling (see Supplementary Material) or a 63x (oil) lens to observe the microstructure of the gel. Larger scope pictures, obtained either by stitching fluorescent microscopy images (Nikon Eclipse Ti) or by transmitted/reflected light macroscope (Nikon SMZ745T/Leica DMS1000) are used to measure the wavelength of the primary pattern (Supplementary Figures~\ref{fig:generations} and \ref{fig:patterns}). Secondary pattern wavelength is set to half of the primary wavelength, according to Supplementary Fig.~\ref{fig:generations}.
 Data shown in Fig.~\ref{fig:acidification}a and c are obtained with a SevenCompact pH-meter (Mettler Toledo) and an MCR 301 rheometer (Anton Paar).
 Permeability is measured using a protocol found in \cite{VanDijk1986} (see Supplementary Method and Supplementary Fig.~\ref{fig:permeability}). The amount of free casein protein present in the gel during the GDL acidification process is measured by titration and UV-spectrometry (Ocean Optics) according to the protocol found in~\cite{Roefs1986} and detailed in Supplementary Method.
 
@@ -228,7 +228,7 @@ Above the isoelectric point, the homogeneous acidification by GDL continuously c
 
 \subsection*{Microstructure measurement}
 
-\begin{figure}[b]
+\begin{figure}
 	\includegraphics{nonmonotonic}%
 	\caption{Microstructure evolution. (a) Details of confocal images in fully adhesive conditions (top row) and with no adhesion on top (bottom row). The scale bar is \SI{10}{\micro\metre}. Arrows indicates the pore size. (b) Corresponding Fourier spectra when no adhesion on top, same times as (a). Lines are fits by Eq.~\ref{eq:fractalS}. The inset shows a schematic association between real space structures and wave numbers. (c-e) Evolution of cut-off length, susceptibility and fractal dimension in full adhesive (black line) and no adhesion on top (orange dashed line) situations. Symbols indicates the times of the images in (a).}%
 	\label{fig:nonmonotonic}%
@@ -247,6 +247,27 @@ Figure~\ref{fig:acidification}c of the main text and Supplementary Fig.~\ref{fig
 In situation (i), the gel keeps its topology throughout the gelation and over acidification. Left of Fig.~\ref{fig:nonmonotonic}a shows that the arms of the gel first shrink laterally while keeping their length, and then swell again. Syn\ae{}resis and swelling are thus local processes. By contrast in situation (ii), the gel as a whole compresses while forming. Since our focal plane is a fixed depth, we cannot follow the topology of the same subset of the network, however the pore size is clearly smaller than in situation (ii). The isoelectric gel, at minimum gel volume, is probably isotropic or only marginally anisotropic in $z$. This explains that subsequent swelling is not occurring only along $z$ but also in plane, causing buckling.
 
 $\xi$ is also systematically measured in the same way at the end of each wrinkling experiment and reported in Supplementary Table~\ref{tab:data}. %Final fractal dimension was always close to 2 within error bars. Comparing $\chi$ across different setting of the microscope is not relevant.
+
+
+\begin{figure*}%
+	\includegraphics{permeability}%
+	\caption{Permeability measurements. (a) Schematic representation of the experiment. (b-c) Evolution of the height of the interface in tube 1 relative to the final height in tube 2. The black line is the best exponential fit $Ae^{-t/\tau}$. (b) Gel is 4\%w casein, 4\%w GDL in water, $H=\SI{2.3}{\milli\metre}$ and $\tau=\SI{57}{\minute}$. (c) Same as (b) for a 50\%w glycerol--water mixture, $H=\SI{4}{\milli\metre}$ and $\tau=\SI{100}{\hour}$.}%
+	\label{fig:permeability}%
+\end{figure*}
+\subsection*{Permeability measurements}
+
+To measure the permeability of our gels, we adapt a method from \cite{VanDijk1986}. First, the gel of interest is formed at the lower extremity of a thin glass tube. The tube is held vertical in a water saturated atmosphere to prevent evaporation until the pH has reached the isoelectric point ($\approx\SI{1}{\hour}$ for our most common composition). Then, we dip the tube in a bath of acetic acid/acetate buffer at pH=4. The buffer has the same glycerol content as the gel solvent, so that the viscosity is constant throughout the experiment. Alongside the first tube (see Fig.~\ref{fig:permeability} a), we dip a second identical tube with no gel in it. A webcam (Logitech Webcam Pro 9000) captures the rise of the liquid in each tube. Since the liquid height in tube 2 reaches its final value quickly, we measure directly $z_\infty-z(t)$.
+
+Darcy law through the gel of permeability $\alpha$ and height $H$ reads 
+\begin{equation}
+\frac{dz}{dt} = \frac{\alpha}{\eta}\frac{\Delta P}{H}
+\end{equation}
+where $\Delta P=\rho g(z_\infty-z(t))$ is the hydrostatic pressure drop through the gel. We use tabulated values of water-glycerol mixtures for the density $\rho$ and viscosity $\eta$ of the buffer. We can thus write
+\begin{equation}
+\frac{d(z-z_\infty)}{dt} = -\frac{z-z_\infty}{\tau}\text{, with\,} \tau = \frac{\eta H}{\alpha \rho g}.
+\end{equation}
+
+By fitting $z(t)-z_\infty$ to an exponential (see Fig.~\ref{fig:permeability} b-c), we obtain $\tau$ and thus $\alpha$. Note that even with $H$ of the order of a few millimetres high glycerol contents yield $\tau\approx \SI{100}{\hour}$ due both to high viscosity and low permeability. Obtaining $z_\infty$ without tube 2 would be time prohibitive.
 
 
 
@@ -430,26 +451,6 @@ Figure~\ref{fig:generations} shows Fourier spectra of binarised altitudes at dif
 In most of our samples it is possible to measure directly the peak-to-peak amplitude $A(t)$ from our confocal measurements. However when the wavelength is too large compared to the field of view, this approach breaks down since we cannot observe both the highest and lowest points of the surface. Even when valid, such a local measurement is rather noisy and we prefer to focus on the measure of the vertical velocity $v$ of the gel that can be integrated over the whole field of view.
 
 We note that when both measurements were available (as in Fig.~\ref{fig:growth}a), the characteristic time $\tau$ obtained from the fit of the exponential growth of $A(t)$ is about $4A_\text{max}/v_\text{max}$, where $A_\text{max} = e-h$ is the amplitude when the gel comes in contact with both walls and $v_\text{max}$ is the maximum velocity of the gel. We use this approximation of $\tau$ for all our samples. This is consistent with the fact that the blister size ($\propto\lambda$) does not evolve after contact (see Fig.~\ref{fig:growth}b), thus the kinetic wavelength is set when $A(t) = A_\text{max}$.
-
-\subsection*{Permeability measurements}
-\begin{figure*}
-	\includegraphics{permeability}
-	\caption{Permeability measurements. (a) Schematic representation of the experiment. (b-c) Evolution of the height of the interface in tube 1 relative to the final height in tube 2. The black line is the best exponential fit $Ae^{-t/\tau}$. (b) Gel is 4\%w casein, 4\%w GDL in water, $H=\SI{2.3}{\milli\metre}$ and $\tau=\SI{57}{\minute}$. (c) Same as (b) for a 50\%w glycerol--water mixture, $H=\SI{4}{\milli\metre}$ and $\tau=\SI{100}{\hour}$.}
-	\label{fig:permeability}
-\end{figure*}
-
-To measure the permeability of our gels, we adapt a method from \cite{VanDijk1986}. First, the gel of interest is formed at the lower extremity of a thin glass tube. The tube is held vertical in a water saturated atmosphere to prevent evaporation until the pH has reached the isoelectric point ($\approx\SI{1}{\hour}$ for our most common composition). Then, we dip the tube in a bath of acetic acid/acetate buffer at pH=4. The buffer has the same glycerol content as the gel solvent, so that the viscosity is constant throughout the experiment. Alongside the first tube (see Fig.~\ref{fig:permeability} a), we dip a second identical tube with no gel in it. A webcam (Logitech Webcam Pro 9000) captures the rise of the liquid in each tube. Since the liquid height in tube 2 reaches its final value quickly, we measure directly $z_\infty-z(t)$.
-
-Darcy law through the gel of permeability $\alpha$ and height $H$ reads 
-\begin{equation}
-\frac{dz}{dt} = \frac{\alpha}{\eta}\frac{\Delta P}{H}
-\end{equation}
-where $\Delta P=\rho g(z_\infty-z(t))$ is the hydrostatic pressure drop through the gel. We use tabulated values of water-glycerol mixtures for the density $\rho$ and viscosity $\eta$ of the buffer. We can thus write
-\begin{equation}
-\frac{d(z-z_\infty)}{dt} = -\frac{z-z_\infty}{\tau}\text{, with\,} \tau = \frac{\eta H}{\alpha \rho g}.
-\end{equation}
-
-By fitting $z(t)-z_\infty$ to an exponential (see Fig.~\ref{fig:permeability} b-c), we obtain $\tau$ and thus $\alpha$. Note that even with $H$ of the order of a few millimetres high glycerol contents yield $\tau\approx \SI{100}{\hour}$ due both to high viscosity and low permeability. Obtaining $z_\infty$ without tube 2 would be time prohibitive.
 
 
 \subsection*{Samples characteristics}
